--- a/src/main/resources/templates/memberlist.html
+++ b/src/main/resources/templates/memberlist.html
@@ -2,29 +2,68 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>회원 리스트</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Member List</title>
 </head>
-<body>
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col">회원 ID</th>
-                    <th scope="col">회원 등급</th>
-                    <th scope="col">회원 이름</th>
-                    <th scope="col">등록 종목</th>
-                    <th scope="col">신청 날짜</th>
-                    <th scope="col">종료 날짜</th>
-                    <th scope="col">잔여 일자</th>
-                    <th scope="col">가격</th>
-                    <th scope="col">핸드폰 번호</th>
-                    <th scope="col">주소</th>
-                </tr>
-            </thead>
-            <tbody>
 
-            </tbody>
-        </table>
+
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+    <div class="container-fluid">
+        <a class="navbar-brand mx-3" href="#">회원관리</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item mx-3">
+                    <a class="nav-link" aria-current="page" href="#">홈</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" href="#">회원추가</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a class="nav-link" href="#">기간연장</a>
+                </li>
+            </ul>
+        </div>
     </div>
+</nav>
+
+<div class="container mt-3">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">등급</th>
+            <th scope="col">이름</th>
+            <th scope="col">등록내용</th>
+            <th scope="col">신청일자</th>
+            <th scope="col">마감일자</th>
+            <th scope="col">잔여일수</th>
+            <th scope="col">지불금액</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr scope="row" th:each="member : ${list}">
+            <th th:text="${member.getId()}">ID 1번</th>
+            <td th:text="${member.getGrade()}">등급-실버</td>
+            <td>
+                <a th:text="${member.getName()}" th:href="@{/member/view(id=${member.id})}">홍길동</a>
+            </td>
+            <td th:text="${member.getType()}">헬스, 필라테스</td>
+            <td th:text="${member.getStart_day()}">2021-09-21 신청</td>
+            <td th:text="${member.getEnd_day()}">2021-12-21 종료</td>
+            <td th:text="${member.getD_day() + '일 남았습니다.'}">30일 남았습니다.</td>
+            <td th:text="${member.getPrice()} + '원 지불하셨습니다.'">30000원 지불</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <a class="btn btn-primary" href="/member/write">회원추가</a>
+
+    <a class="btn btn-primary" href="/member/plus">기간연장</a>
+</div>
+
 </body>
 </html>
