회원 신청날자, 종료날자, 잔여일자 관리

--- a/src/main/resources/templates/memberwrite.html
+++ b/src/main/resources/templates/memberwrite.html
@@ -105,16 +105,16 @@
                         </div>
 
                         <div class="col-12">
-                            <label for="last" class="form-label">신청 기간</label>
-                            <input type="text" class="form-control" id="last" name="last" placeholder="ex) 30">
+                            <label for="d_day" class="form-label">신청 기간</label>
+                            <input type="text" class="form-control" id="d_day" name="d_day" placeholder="ex) 30">
                             <div class="invalid-feedback">
                                 Input is empty.
                             </div>
                         </div>
 
                         <div class="col-12">
-                            <label for="money" class="form-label">지불금액</label>
-                            <input type="text" class="form-control" id="money" name="money"
+                            <label for="price" class="form-label">지불금액</label>
+                            <input type="text" class="form-control" id="price" name="price"
                                    placeholder="ex) 30,000">
                             <div class="invalid-feedback">
                                 Input is empty.
