--- a/src/main/resources/templates/memberlist.html
+++ b/src/main/resources/templates/memberlist.html
@@ -13,17 +13,17 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
     <div class="container-fluid">
-        <a class="navbar-brand mx-3" href="#">회원관리</a>
+        <a class="navbar-brand mx-3" href="/member/list">회원관리</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item mx-3">
-                    <a class="nav-link" aria-current="page" href="#">홈</a>
+                    <a class="nav-link" aria-current="page" href="/member/list">홈</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">회원추가</a>
+                    <a class="nav-link" href="/member/write">회원추가</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">기간연장</a>
+                    <a class="nav-link" href="/member/extension">기간연장</a>
                 </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
 
     <a class="btn btn-primary" href="/member/write">회원추가</a>
 
-    <a class="btn btn-primary" href="/member/plus">기간연장</a>
+    <a class="btn btn-primary" href="/member/extension">기간연장</a>
 </div>
 
 </body>
